# CPCM-X

./: .gitignore  CMakeLists.txt  ElementParameters.f90  README.md  bonding.f90  ch4.cosmo  ch4_old.cosmo  config.toml  cosmo.param  cosmotherm.out  cpcmx.toml  cpx.h  crs.param  crs.param_h2o  crs.param_ot  dictionary.f90  eledata_module.mod  element_dict.mod  energy_ch4  fpm.toml  globals.f90  globals.mod  h2o.cosmo  hex.cosmo  hexch4.energy  hyd.energy  initialize.f90  linkedlist.f90  logkow.sh  main.f90  main222.f90  mainsaved.f90  makefile  meo.cosmo  meoenergy  meson.build  meson_options.txt  met.cosmo  met.energy  noco.cosmo  (+21 more)
.github/workflows/: fortran_build.yml
DATABASE-COSMO/: 2methylpyridine.cosmo  4methyl2pentanone.cosmo  aceticacid.cosmo  acetonitrile.cosmo  acetophenone.cosmo  aniline.cosmo  anisole.cosmo  benzene.cosmo  benzylalcohol.cosmo  bromobenzene.cosmo  bromoethane.cosmo  bromoform.cosmo  bromooctane.cosmo  butanol.cosmo  butanone.cosmo  butylacetate.cosmo  butylbenzene.cosmo  carbondisulfide.cosmo  carbontet.cosmo  chlorobenzene.cosmo  chloroform.cosmo  chlorohexane.cosmo  cyclohexane.cosmo  cyclohexanone.cosmo  decalin.cosmo  decane.cosmo  decanol.cosmo  dibromoethane.cosmo  dibutylether.cosmo  dichloroethane.cosmo  diethylether.cosmo  diisopropylether.cosmo  dimethylacetamide.cosmo  dimethylformamide.cosmo  dimethylpyridine.cosmo  dimethylsulfoxide.cosmo  dodecane.cosmo  ethanol.cosmo  ethoxybenzene.cosmo  ethylacetate.cosmo  (+48 more)
DATABASE-ISODENS/: 4methyl2pentanone.cosmo  aceticacid.cosmo  acetonitrile.cosmo  aniline.cosmo  anisole.cosmo  benzene.cosmo  benzylalcohol.cosmo  bromobenzene.cosmo  bromooctane.cosmo  butanol.cosmo  butanone.cosmo  butylbenzene.cosmo  carbondisulfide.cosmo  carbontet.cosmo  chlorobenzene.cosmo  chloroform.cosmo  crs.param_h2o  decalin.cosmo  diisopropylether.cosmo  dimethylformamide.cosmo  dimethylsulfoxide.cosmo  ethoxybenzene.cosmo  iodobenzene.cosmo  isooctane.cosmo  isopropylbenzene.cosmo  methoxyethanol.cosmo  methylformamide.cosmo  nitrobenzene.cosmo  nitromethane.cosmo  octane.cosmo  odichlorobenzene.cosmo  onitrotoluene.cosmo  pentadecane.cosmo  pentanol.cosmo  secbutanol.cosmo  smd_ot  tbutylbenzene.cosmo  toluene.cosmo  tributylphosphate.cosmo  trimethylbenzene.cosmo  (+1 more)
DATABASE-ORCA/: aceticacid.cosmo  acetophenone.cosmo  aniline.cosmo  benzylalcohol.cosmo  bromoform.cosmo  bromooctane.cosmo  butanol.cosmo  butylbenzene.cosmo  carbondisulfide.cosmo  chlorobenzene.cosmo  chlorohexane.cosmo  crs.param_h2o  cyclohexane.cosmo  decalin.cosmo  decanol.cosmo  dibromoethane.cosmo  dibutylether.cosmo  dichloroethane.cosmo  dimethylpyridine.cosmo  dimethylsulfoxide.cosmo  ethoxybenzene.cosmo  ethylacetate.cosmo  fluorobenzene.cosmo  fluoroctane.cosmo  hexadecyliodide.cosmo  hexane.cosmo  isopropanol.cosmo  isopropyltoluene.cosmo  mcresol.cosmo  methylformamide.cosmo  nitrobenzene.cosmo  nitroethane.cosmo  nonanol.cosmo  odichlorobenzene.cosmo  pentadecane.cosmo  perfluorobenzene.cosmo  propanol.cosmo  pyridine.cosmo  secbutanol.cosmo  secbutylbenzene.cosmo  (+10 more)
DATABASE-TM/: 4methyl2pentanone.cosmo  acetophenone.cosmo  anisole.cosmo  benzene.cosmo  bromobenzene.cosmo  bromoethane.cosmo  bromoform.cosmo  butanol.cosmo  butylbenzene.cosmo  chloroform.cosmo  chlorohexane.cosmo  crs.param_h2o  cyclohexanone.cosmo  decalin.cosmo  dibutylether.cosmo  diisopropylether.cosmo  dimethylpyridine.cosmo  dodecane.cosmo  ethanol.cosmo  ethoxybenzene.cosmo  ethylacetate.cosmo  fluoroctane.cosmo  hexadecane.cosmo  hexanol.cosmo  isopropanol.cosmo  isopropyltoluene.cosmo  mcresol.cosmo  mesitylene.cosmo  nitrobenzene.cosmo  nitromethane.cosmo  nonane.cosmo  pentadecane.cosmo  pentane.cosmo  pentanol.cosmo  phenylether.cosmo  propanol.cosmo  secbutylbenzene.cosmo  smd_ot  tetrahydrofuran.cosmo  tetralin.cosmo  (+2 more)
DATABASE-gTB/: 2methylpyridine.cosmo  4methyl2pentanone.cosmo  aceticacid.cosmo  acetonitrile.cosmo  acetophenone.cosmo  aniline.cosmo  anisole.cosmo  benzene.cosmo  benzylalcohol.cosmo  bromobenzene.cosmo  bromoethane.cosmo  bromoform.cosmo  bromooctane.cosmo  butanol.cosmo  butanone.cosmo  butylacetate.cosmo  butylbenzene.cosmo  carbondisulfide.cosmo  carbontet.cosmo  chlorobenzene.cosmo  chloroform.cosmo  chlorohexane.cosmo  crs.param_ot  cyclohexane.cosmo  cyclohexanone.cosmo  decalin.cosmo  decane.cosmo  decanol.cosmo  dibromoethane.cosmo  dibutylether.cosmo  dichloroethane.cosmo  diethylether.cosmo  diisopropylether.cosmo  dimethylacetamide.cosmo  dimethylformamide.cosmo  dimethylpyridine.cosmo  dimethylsulfoxide.cosmo  dodecane.cosmo  ethanol.cosmo  ethoxybenzene.cosmo  (+49 more)
DB/gtb/: aniline.cosmo  bromoform.cosmo  chlorohexane.cosmo  crs.param_h2o  decalin.cosmo  decanol.cosmo  dibromoethane.cosmo  dibutylether.cosmo  dimethylformamide.cosmo  ethylbenzene.cosmo  fluorobenzene.cosmo  (+13 more)
app/: CMakeLists.txt  main.f90  meson.build
config/: CMakeLists.txt  config.cmake.in  install-mod.py  meson.build
config/modules/: Findmctc-lib.cmake  Findnumsa.cmake  Findtblite.cmake  Findtest-drive.cmake  Findtoml-f.cmake  cpcm-x-utils.cmake  xtb-utils.cmake
src/: CMakeLists.txt  ElementParameters.f90  bonding.f90  broyden.f90  cpx.f90  cpx_c_api.f90  cpxcalc.f90  crs.f90  data.f90  defaultparameter.f90  disp.f90  globals.f90  initialize.f90  internaldb.f90  isodens.f90  lapack.f90  meson.build  pr.f90  profile.f90  qc_calc.f90  sac.f90  sdm.f90  sigma_av.f90  smd.f90  sort.f90  timer.f90  turbomole.f90  type.f90
src/cpcmx/: CMakeLists.txt  ElementParameters.f90  cpxcalc.f90  crs.f90  data.f90  globals.f90  initialize.f90  internaldb.f90  isodens.f90  lapack.f90  meson.build  pr.f90  profile.f90  qc_calc.f90  sac.f90  sigma_av.f90  smd.f90  timer.f90  type.f90
subprojects/: numsa.wrap
test/: CMakeLists.txt  energy  eth.cosmo  eto.cosmo  h2o.cosmo  h2o_sigma.txt  hex.cosmo  hex.energy  hexo.cosmo  hyd.cosmo  meo_sigma.txt  meson.build  oco.cosmo  oct.cosmo  run  run.dir  runkow.sh  test.cosmo  test.sh  test2.cosmo
test/api/: CMakeLists.txt  c_api_example.c  meson.build
test/unit/: CMakeLists.txt  main.f90  meson.build  test_calc.f90  test_io.f90
(+394 files in other folders)
