# This file is part of CPCM-X.
# SPDX-Identifier: LGPL-3.0-or-later
#
# CPCM-X is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# CPCM-X is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with CPCM-X.  If not, see <https://www.gnu.org/licenses/>.

srcs += files(
  'ElementParameters.f90',
  'type.f90',
  'cpxcalc.f90',
  'defaultparameter.f90',
  'bonding.f90',
  'broyden.f90',
  'crs.f90',
  'globals.f90',
  'initialize.f90',
  'lapack.f90',
  'pr.f90',
  'profile.f90',
  'qc_calc.f90',
  'sac.f90',
  'sigma_av.f90',
  'smd.f90',
  'sort.f90',
  'timer.f90',
  'data.f90',
  'isodens.f90',
)
